# specterext-pls

./: MANIFEST.in  README.md  pyproject.toml  pytest.ini  requirements.in  requirements.txt  setup.cfg
src/pls/specterext/specterext-pls/: __main__.py  app_config.py  config.py  controller.py  service.py
src/pls/specterext/specterext-pls/static/specterext-pls/javascript/: dev-build.sh  nostr.js  pls.js  pls.min.js
src/pls/specterext/specterext-pls/templates/specterext-pls/: base.jinja  contracts.jinja  index.jinja  settings.jinja
src/pls/specterext/specterext-pls/templates/specterext-pls/components/: specterext_pls_menu.jinja  specterext_pls_tab.jinja
tests/: conftest.py
